--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^10.12.0",
     "next": "14.2.3",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18"
   },
